fixed truncated tables on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -168,6 +168,14 @@ label {
     line-height: 1.5;
   }
   
+  .table th{
+    min-width: 150px;
+  }
+
+  .table td{
+    min-width: 150px;
+  }
+
   img {
     max-width: 100%;
   }
